--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,15 +1,18 @@
 parserOptions:
-  sourceType: "module"
-  ecmaVersion: 2020
+    sourceType: "module"
+    ecmaVersion: 2020
 plugins:
-  - prettier
+    - prettier
 extends:
-  - eslint:recommended
-  - plugin:prettier/recommended
+    - eslint:recommended
+    - plugin:prettier/recommended
 env:
-  es6: true
-  node: true
-  browser: true
+    es6: true
+    node: true
+    browser: true
 rules:
-  prettier/prettier: error
-  no-undef: off
+    prettier/prettier: error
+    prettier/end-of-line: crlf
+    arrow-body-style: off
+    prefer-arrow-callback: off
+    no-undef: off
