--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "prettier.endOfLine": "crlf",
+  "prettier.tabWidth": 2,
+  "prettier.printWidth": 80,
+  "javascript.validate.enable": false
 }
